Add more options for playlist searching
