# api-definition.yml
@@ -75,14 +75,6 @@ paths:
         we simply return a 200 response with the JSON returned from the Spotify code exchange
       tags:
         - auth
-<<<<<<< HEAD
-      parameters:
-        - in: query
-          name: code
-          required: true
-          schema:
-            type: string
-=======
       requestBody:
         description: the authorization code from spotify
         required: true
@@ -93,7 +85,6 @@ paths:
               properties:
                 code:
                   type: string
->>>>>>> 895936d3ed0a18a0d8c9ed73ee612fec84c1b583
       responses:
         200:
           description: successfully exchanged authorization code for access tokens
@@ -205,9 +196,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
-<<<<<<< HEAD
-
-=======
                 
   '/api/users/{id}':
     get:
@@ -232,7 +220,6 @@ paths:
               schema:
                 $ref: '#/components/schemas/User'
                 
->>>>>>> 895936d3ed0a18a0d8c9ed73ee612fec84c1b583
   '/api/categories/':
     get:
       tags:
@@ -273,6 +260,16 @@ paths:
           schema:
             type: string
           description: The subcategory of playlist
+        - in: query
+          name: sort-key
+          schema:
+            type: string
+          description: "Can be one of the following defaulting to likes_count: created_at, updated_at, name, likes_count"
+        - in: query
+          name: order
+          schema:
+            type: string
+          description: "Can be one of the following defaulting to desc: asc, desc"
       responses:
         200:
           description: A JSON array of playlists
